# mape-k-sample-implementation

./: .gitignore  README.md  SCENARIO.md  requirements.txt
241025_mapek/: QUICKSTART.md  README.md  REORGANIZATION.md  iot_gateway.py  requirements.txt  setup_complete_database.sql  setup_execution_log.sql  setup_iot_gateway_views.sql  setup_knowledge_base.sql  start_all.sh  (+1 more)
mapek/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  SOFTWARE_PRACTICES-1.md  SOFTWARE_PRACTICES.md  TESTING_PRACTICES.md  __Brutal But Fair Code Review_ MAPE-K Water Utilit.md  analyze.py  create_tables.sql  docker-compose.yml  execute.py  knowledge.py  logger.py  main.py  main_enhanced.py  monitor.py  plan.py  pyproject.toml  real_iot_pattern_system.py  real_iot_system.py  requirements.txt  test_real_iot_integration.py
mapek/.github/workflows/: ci.yml
mapek/application/: __init__.py
mapek/application/services/: analyzer_service.py  container.py  executor_service.py  monitor_service.py  planner_service.py
mapek/application/use_cases/: __init__.py  mape_loop_use_case.py
mapek/config/: database.py  settings.py
mapek/docs/: RESEARCH_PATTERNS.md
mapek/docs_archive/: API_REFERENCE.md  README.md
mapek/domain/: __init__.py  entities.py  models.py
mapek/domain/adapters/: legacy_integration.py
mapek/domain/commands/: command_pattern.py
mapek/domain/events/: event_system.py
mapek/domain/patterns/: template_method_pipeline.py
mapek/domain/strategies/: scenario_analysis_strategy.py
mapek/examples/: pattern_integration_demo.py
mapek/infrastructure/: __init__.py
mapek/infrastructure/cache/: __init__.py  redis_client.py
mapek/infrastructure/database/: cached_threshold_repository.py  repositories.py
mapek/infrastructure/monitoring/: observability.py
mapek/presentation/: __init__.py
mapek/scripts/: cleanup_workspace.sh
mapek/tests/integration/: test_mape_integration.py
mapek/tests/property/: test_property_based.py
mapek/tests/unit/: test_analyzer.py
(+53 files in other folders)
